--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -33,3 +33,14 @@
     font-weight: 500;
     font-size: 2rem;
 }
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+}
