--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -44,3 +44,39 @@
     left: 0;
     right: 0;
 }
+
+.todo-container {
+    margin-left: 1rem;
+    gap: 1rem;
+    backdrop-filter: blur(5px);
+    width: fit-content;
+}
+
+.todo-heading {
+    font-size: 1.5rem;
+}
+
+.list-display {
+    display: flex;
+    flex-direction: column;
+    gap: 10px
+}
+
+.todo-input {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    margin: 1.5rem 0;
+    font-size: 1rem;
+}
+
+.delete-completed-btn, .btn {
+    background-color: black;
+    color: #f1f1f1;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 1rem 0;
+    cursor: pointer;
+
+}
