--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -3,6 +3,8 @@
     align-self: flex-end;
     flex-direction: column;
     align-items: center;
+    margin-top: 1rem;
+    position: absolute;
 }
 
 .temp-container {
@@ -26,6 +28,7 @@
 .time {
     font-size: 5rem;
     text-align: center;
+    margin-top: 10rem;
 }
 
 .greeting {
