--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -69,7 +69,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid black;
-    margin: 1.5rem 0;
+    margin-bottom: 1.5rem ;
     font-size: 1rem;
 }
 
