--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -8,7 +8,6 @@
     left: 0;
     right: 0;
     gap: 1rem;
-    background-color: red;
 }
 
 .welcome-text {
@@ -21,4 +20,35 @@
     border-bottom: 1px solid black;
     margin-bottom: 1.5rem ;
     font-size: 1.5rem;
+}
+
+.focus {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.btn-container {
+    align-self: flex-end;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+}
+
+.btns {
+    background-color: transparent;
+    border: none;
+    padding: 5px;
+    margin: 5px;
+    cursor: pointer;
+    color: #f0f8ff;
+}
+
+.focus-input {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    margin-bottom: 1.5rem ;
+    font-size: 1.5rem;
+    width: 20rem;
+    align-self: center;
 }
