--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -71,6 +71,8 @@
     border-bottom: 1px solid black;
     margin-bottom: 1.5rem ;
     font-size: 1rem;
+    background-color: transparent;
+    color: #f0f8ff;
 }
 
 .delete-completed-btn, .btn {
