--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -22,6 +22,7 @@
     font-size: 1.5rem;
     background-color: transparent;
     color: #f0f8ff;
+    text-align: center;
 }
 
 .focus {
@@ -55,4 +56,5 @@
     align-self: center;
     background-color: transparent;
     color: #f0f8ff;
+    text-align: center;
 }
