--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -58,3 +58,16 @@
     color: #f0f8ff;
     text-align: center;
 }
+
+.privacy-policy {
+    padding: 40px 20px;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin: 0 auto;
+}
+
+.privacy-policy a {
+    color: #f0f8ff;
+}
